--- a/src/app/root/components/header/header.component.html
+++ b/src/app/root/components/header/header.component.html
@@ -5,18 +5,11 @@
                 <img src="assets/images/header/logo.png" />
             </div>
             <div>
-                <h1>Archi</h1>
+                <h1>Library Management</h1>
             </div>
         </div>
         <div class="right-content">
             <div class="actions">
-                <div>
-                    <input type="text" placeholder="Aide..." />
-                    <img src="assets/images/header/ico-aide.png" />
-                </div>
-                <div>
-                    <img src="assets/images/header/ico-notification.png" />
-                </div>
                 <div>
                     <label class="dropdown">
                         <div class="dd-button">
