--- a/src/app/root/components/header/header.component.scss
+++ b/src/app/root/components/header/header.component.scss
@@ -42,41 +42,13 @@
         .right-content {
             display: grid;
             grid-template-columns: 100%;
-            grid-template-rows: 60px auto;
+            grid-template-rows: 70px auto;
 
             .actions {
                 display: grid;
-                grid-template-columns: 335px 80px 200px;
-                grid-template-rows: auto;
-                align-items: flex-end;
                 justify-content: end;
 
-                div:nth-child(1) {
-                    width: 100%;
-                    align-items: center;
-                    height: 35px;
-                    border: 1px solid $header-search-border-color;
-                    border-radius: 5px;
-
-                    img {
-                        margin-left: 5px;
-                        margin-right: 10px;
-                    }
-                }
-
-                div:nth-child(2) {
-                    width: 100%;
-                    border-style: solid;
-                    border-width: 0;
-                    border-right-width: 1px;
-                    border-color: $header-separator-color;
-
-                    img {
-                        margin: 0 auto;
-                    }
-                }
-
-                div:nth-child(3) {
+                div {
                     font-size: 10px;
                     align-items: center;
                     padding-left: 15px;
