--- a/src/app/root/components/header/header.component.scss
+++ b/src/app/root/components/header/header.component.scss
@@ -60,7 +60,7 @@
                     }
 
                     .dd-button {
-                        padding: 10px 30px 10px 0;
+                        padding: 0 30px 0 0;
                         background-color: #ffffff;
                         cursor: pointer;
                         white-space: nowrap;
