[AUTHENTICATION] App title update #master

--- a/src/app/authentication/components/authentication/authentication.component.html
+++ b/src/app/authentication/components/authentication/authentication.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <img src="assets/images/header/logo.png" />
-    <label class="title">Archi</label>
+    <label class="title">Library Management</label>
     <div class="wrapper">
         <form [formGroup]="form" (submit)="logIn.emit(form.value)">
             <div>
