--- a/src/app/product/containers/product-form-root/product-form-root.component.html
+++ b/src/app/product/containers/product-form-root/product-form-root.component.html
@@ -1,3 +1,25 @@
-<p>
-  product-form-root works!
-</p>
+<div class="container">
+    <app-product-form
+        *ngIf="product$ | async as product"
+        [product]="product$ | async"
+        [isEditing]="isEditing$ | async"
+        [editEnabled]="productEditEnabled$ | async"
+        (edit)="onEdit($event)"
+        (save)="onSave($event)"
+        (cancel)="onCancelEdit(product)"
+    ></app-product-form>
+</div>
+
+<modal #successfullSavingModal class="popup-modal success">
+    <ng-template #modalHeader>
+        Succès
+    </ng-template>
+    <ng-template #modalBody>
+        Element enregistré avec success
+    </ng-template>
+    <ng-template #modalFooter>
+        <button class="orange" (click)="successfullSavingModal.close()">
+            OK
+        </button>
+    </ng-template>
+</modal>
