[PRODUCT] List root #master

--- a/src/app/product/containers/product-list-root/product-list-root.component.html
+++ b/src/app/product/containers/product-list-root/product-list-root.component.html
@@ -1,3 +1,46 @@
-<p>
-  product-list-root works!
-</p>
+<div class="container">
+    <header>Gestion des produits</header>
+    <div class="search-bar">
+        <app-search-bar (search)="onSearch($event)"></app-search-bar>
+    </div>
+    <div class="list">
+        <app-loader [isLoading]="productsLoading$ | async">
+            <app-product-list
+                [products]="products$ | async"
+                [currentProduct]="currentProduct$ | async"
+                [editEnabled]="productEditEnabled$ | async"
+                [deleteEnabled]="productDeleteEnabled$ | async"
+                (view)="onViewDetail($event)"
+                (edit)="onEdit($event)"
+                (delete)="onDelete($event)"
+            ></app-product-list>
+        </app-loader>
+    </div>
+    <footer>
+        <button class="btn-new" [disabled]="!(productCreateEnabled$ | async)" (click)="onCreate()">
+            +
+        </button>
+        <app-pagination
+            [totalItems]="totalItems$ | async"
+            (paginate)="onPaginate($event)"
+        ></app-pagination>
+    </footer>
+    <div class="detail">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
+<modal #deletionConfirmModal class="popup-modal warning">
+    <ng-template #modalHeader>
+        Confirmation
+    </ng-template>
+    <ng-template #modalBody>
+        Êtes-vous sûr de vouloir supprimer l'element?
+    </ng-template>
+    <ng-template #modalFooter>
+        <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
+            OUI
+        </button>
+        <button class="green" (click)="deletionConfirmModal.close()">NON</button>
+    </ng-template>
+</modal>
