--- a/src/app/supplier/containers/supplier-root/supplier-root.component.html
+++ b/src/app/supplier/containers/supplier-root/supplier-root.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <header>Feature name Here</header>
+    <header>Gestion des fournisseurs</header>
     <div class="search-bar">
         <app-search-bar (search)="onSearch($event)"></app-search-bar>
     </div>
