--- a/src/app/root/components/home-root/home-root.component.html
+++ b/src/app/root/components/home-root/home-root.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <aside>
-        <app-side-nav></app-side-nav>
+        <app-side-nav [url]="url$ | async" [menus]="homeMenus"></app-side-nav>
     </aside>
     <main>
         <router-outlet></router-outlet>
