--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,9 +1,4 @@
 <div class="container">
-    <img src="assets/images/ico-search.png">
-    <input
-        type="text"
-        placeholder="Rechercher par nom, prénom, addresse, ..."
-        [(ngModel)]="searchTerm"
-        (input)="onChange()"
-    >
+    <img src="assets/images/ico-search.png" />
+    <input type="text" placeholder="Recherche" [(ngModel)]="searchTerm" (input)="onChange()" />
 </div>
