--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -1,11 +1,12 @@
 @import 'tables.scss';
 
-$c1Width: 40%;
+$c1Width: 20%;
 $c2Width: 20%;
 $c3Width: 20%;
 $c4Width: 20%;
+$c5Width: 20%;
 
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -33,6 +34,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width;
         tbody td:nth-child(4),
         thead th:nth-child(4) {
             @include thTdWidth($c4Width);
+        }
+        tbody td:nth-child(5),
+        thead th:nth-child(5) {
+            @include thTdWidth($c5Width);
         }
     }
 }
