--- a/src/app/product/containers/product-form-root/product-form-root.component.html
+++ b/src/app/product/containers/product-form-root/product-form-root.component.html
@@ -4,6 +4,7 @@
         [product]="product$ | async"
         [isEditing]="isEditing$ | async"
         [editEnabled]="productEditEnabled$ | async"
+        [suppliers]="suppliers$ | async"
         (edit)="onEdit($event)"
         (save)="onSave($event)"
         (cancel)="onCancelEdit(product)"
