[PRODUCT] Add quantity field #master

--- a/src/app/product/components/product-form/product-form.component.scss
+++ b/src/app/product/components/product-form/product-form.component.scss
@@ -28,6 +28,6 @@ button {
     @extend %blue-button;
 }
 
-.green {
-    @extend %green-button;
+.dark-purple {
+    @extend %dark-purple-button;
 }
