--- a/src/app/product/components/product-form/product-form.component.html
+++ b/src/app/product/components/product-form/product-form.component.html
@@ -12,15 +12,22 @@
             <label>
                 Prix Unitaire *
             </label>
-            <input formControlName="costPrice" type="text" />
+            <input formControlName="costPrice" type="number" min="0" appDigitOnly />
             <app-validation-error [control]="form.controls['costPrice']"></app-validation-error>
         </div>
         <div class="control">
             <label>
                 Prix de vente *
             </label>
-            <input formControlName="sellingPrice" type="text" />
+            <input formControlName="sellingPrice" type="number" min="0" appDigitOnly />
             <app-validation-error [control]="form.controls['sellingPrice']"></app-validation-error>
+        </div>
+        <div class="control">
+            <label>
+                Quantité *
+            </label>
+            <input formControlName="quantity" type="number" min="0" appDigitOnly />
+            <app-validation-error [control]="form.controls['quantity']"></app-validation-error>
         </div>
         <div class="control">
             <label for="supplier">Fournisseur *</label>
@@ -45,7 +52,9 @@
                 MODIFIER
             </button>
             <button class="blue" *ngIf="form.enabled" type="submit">ENREGISTRER</button>
-            <button class="green" *ngIf="form.enabled" (click)="cancel.emit()">ANNULER</button>
+            <button class="dark-purple" *ngIf="form.enabled" (click)="cancel.emit()">
+                ANNULER
+            </button>
         </div>
     </form>
 </div>
