--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -3,10 +3,10 @@
 $c1Width: 20%;
 $c2Width: 20%;
 $c3Width: 20%;
-$c4Width: 20%;
+$c4Width: 10%;
 $c5Width: 20%;
-
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
+$c6Width: 10%;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -38,6 +38,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
         tbody td:nth-child(5),
         thead th:nth-child(5) {
             @include thTdWidth($c5Width);
+        }
+        tbody td:nth-child(6),
+        thead th:nth-child(6) {
+            @include thTdWidth($c6Width);
         }
     }
 }
