Button style #master

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -106,7 +106,7 @@ $disabled: #d6d6d6;
     height: 30px;
     font-size: 20px;
     color: white;
-    background-color: $green;
+    background-color: $purple;
     border: none;
     border-radius: 2px;
 
