Button style #master

--- a/src/app/role/components/role-detail/role-detail.component.html
+++ b/src/app/role/components/role-detail/role-detail.component.html
@@ -19,9 +19,9 @@
         </div>
     </div>
     <div *ngIf="categoryList" class="button-container">
-        <button (click)="edit()" class="purple" type="button">
+        <button (click)="edit()" class="blue" type="button">
             MODIFIER
         </button>
-        <button class="purple" *ngIf="isEditing" type="submit">ENREGISTRER</button>
+        <button class="dark-purple" *ngIf="isEditing" type="submit">ENREGISTRER</button>
     </div>
 </div>
