--- a/src/app/role/components/role-detail/role-detail.component.scss
+++ b/src/app/role/components/role-detail/role-detail.component.scss
@@ -61,7 +61,11 @@ ul {
         @extend %button;
     }
 
-    .purple {
-        @extend %purple-button;
+    .blue {
+        @extend %blue-button;
+    }
+
+    .dark-purple {
+        @extend %dark-purple-button;
     }
 }
