--- a/src/app/role/components/role-form/role-form.component.scss
+++ b/src/app/role/components/role-form/role-form.component.scss
@@ -82,8 +82,8 @@ ul {
         @extend %button;
     }
 
-    .purple {
-        @extend %purple-button;
+    .blue {
+        @extend %blue-button;
     }
 
     .dark-purple {
