--- a/src/app/user/components/user-form/user-form.component.scss
+++ b/src/app/user/components/user-form/user-form.component.scss
@@ -28,8 +28,8 @@ button {
     @extend %button;
 }
 
-.purple {
-    @extend %purple-button;
+.blue {
+    @extend %blue-button;
 }
 
 .dark-purple {
