--- a/src/app/role/components/role-form/role-form.component.html
+++ b/src/app/role/components/role-form/role-form.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="button-container">
         <div class="fill"></div>
-        <button (click)="onSubmit()" class="purple" type="submit">
+        <button (click)="onSubmit()" class="blue" type="submit">
             ENREGISTRER
         </button>
         <button (click)="cancel.emit(role)" class="dark-purple" type="button">
