--- a/src/app/user/components/user-form/user-form.component.html
+++ b/src/app/user/components/user-form/user-form.component.html
@@ -43,14 +43,14 @@
         </div>
         <div class="buttons">
             <button
-                class="purple"
+                class="blue"
                 *ngIf="!form.enabled"
                 (click)="edit.emit(form.value)"
                 [disabled]="!editEnabled"
             >
                 MODIFIER
             </button>
-            <button class="purple" *ngIf="form.enabled" type="submit">ENREGISTRER</button>
+            <button class="blue" *ngIf="form.enabled" type="submit">ENREGISTRER</button>
             <button class="dark-purple" *ngIf="form.enabled" (click)="cancel.emit()">
                 ANNULER
             </button>
