--- a/src/app/user/containers/user-root/user-root.component.scss
+++ b/src/app/user/containers/user-root/user-root.component.scss
@@ -30,7 +30,7 @@
     footer {
         grid-area: footer;
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center;
     }
 
