Success button modal style #master

--- a/src/app/product/containers/product-form-root/product-form-root.component.html
+++ b/src/app/product/containers/product-form-root/product-form-root.component.html
@@ -19,7 +19,7 @@
         Element enregistré avec success
     </ng-template>
     <ng-template #modalFooter>
-        <button class="orange" (click)="successfullSavingModal.close()">
+        <button class="blue" (click)="successfullSavingModal.close()">
             OK
         </button>
     </ng-template>
