--- a/src/app/supplier/containers/supplier-form-root/supplier-form-root.component.html
+++ b/src/app/supplier/containers/supplier-form-root/supplier-form-root.component.html
@@ -18,7 +18,7 @@
         Element enregistré avec success
     </ng-template>
     <ng-template #modalFooter>
-        <button class="orange" (click)="successfullSavingModal.close()">
+        <button class="blue" (click)="successfullSavingModal.close()">
             OK
         </button>
     </ng-template>
