--- a/src/app/root/components/header/header.component.scss
+++ b/src/app/root/components/header/header.component.scss
@@ -72,6 +72,7 @@
                         border: 0;
 
                         p {
+                            text-align: center;
                             text-overflow: ellipsis;
                             overflow: hidden;
                             width: 5rem;
