[SELECTED PRODUCT] Action buttons #master

--- a/src/app/sale/components/selected-product-list/selected-product-list.component.html
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.html
@@ -25,4 +25,8 @@
             </tr>
         </tbody>
     </table>
+    <div class="buttons-container">
+        <button class="blue">ENVOYER</button>
+        <button class="dark-purple">ANNULER</button>
+    </div>
 </div>
