--- a/src/app/sale/components/selected-product-list/selected-product-list.component.scss
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.scss
@@ -1,4 +1,5 @@
 @import 'tables.scss';
+@import 'buttons.scss';
 
 $c1Width: 20%;
 $c2Width: 20%;
@@ -15,6 +16,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
 .table-container {
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto 52px;
+
     table {
         @extend %table;
         width: $tableWidth;
@@ -39,4 +44,21 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
             @include thTdWidth($c5Width);
         }
     }
+}
+
+.buttons-container {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+button {
+    @extend %button;
+}
+
+.blue {
+    @extend %blue-button;
+}
+
+.dark-purple {
+    @extend %dark-purple-button;
 }
