[SALE] Filter actions #master

--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -2,6 +2,7 @@
     <header>Gestion des ventes</header>
     <div class="selectable-product-container">
         <main>
+            <app-search-bar (search)="onSearch($event)"></app-search-bar>
             <app-loader [isLoading]="productsLoading$ | async">
                 <app-selectable-product-list
                     [products]="products$ | async"
