[AUTHENTICATION] Space managing #master

--- a/src/app/authentication/components/authentication/authentication.component.scss
+++ b/src/app/authentication/components/authentication/authentication.component.scss
@@ -18,8 +18,8 @@
     color: $authentication-title-color;
     font-size: 46px;
     font-family: $worksans-light;
-    margin-top: 128px;
-    margin-bottom: 88px;
+    padding-top: 30px;
+    padding-bottom: 60px;
 }
 
 .login,
