Front week end work #master

--- a/src/app/sale/components/selectable-product-list/selectable-product-list.component.html
+++ b/src/app/sale/components/selectable-product-list/selectable-product-list.component.html
@@ -18,8 +18,8 @@
                 <td>{{ product.costPrice | number: '1.0-0' }}</td>
                 <td>{{ product.sellingPrice | number: '1.0-0' }}</td>
                 <td>{{ product.quantity }}</td>
-                <td>
-                    <input type="number" min="0" appDigitOnly />
+                <td class="actions">
+                    <img src="/assets/images/ico-add.png" (click)="add.emit(product)" />
                 </td>
             </tr>
         </tbody>
