--- a/src/app/sale/components/selectable-product-list/selectable-product-list.component.scss
+++ b/src/app/sale/components/selectable-product-list/selectable-product-list.component.scss
@@ -39,4 +39,9 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
             @include thTdWidth($c5Width);
         }
     }
+
+    img {
+        width: 20px;
+        height: 20px;
+    }
 }
