--- a/src/app/sale/containers/sale-root/sale-root.component.scss
+++ b/src/app/sale/containers/sale-root/sale-root.component.scss
@@ -1,4 +1,5 @@
 @import 'texts.scss';
+@import 'buttons.scss';
 
 .container {
     width: 100%;
@@ -38,4 +39,12 @@
         border-radius: 8px;
         padding: 25px;
     }
+}
+
+.blue {
+    @extend %blue-button;
+}
+
+.dark-purple {
+    @extend %dark-purple-button;
 }
