[SALE] Canceling #master

--- a/src/app/sale/components/selected-product-list/selected-product-list.component.html
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.html
@@ -30,6 +30,6 @@
     </table>
     <div class="buttons-container">
         <button class="blue">VALIDER</button>
-        <button class="dark-purple">ANNULER</button>
+        <button class="dark-purple" (click)="cancel.emit()">ANNULER</button>
     </div>
 </div>
