--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -21,9 +21,25 @@
         <app-selected-product-list
             [saleItems]="saleItems$ | async"
             (delete)="currentSaleItem = $event; deletionConfirmModal.open()"
+            (cancel)="onCancelSale()"
         ></app-selected-product-list>
     </div>
 </div>
+
+<modal #cancelingConfirmModal class="popup-modal warning">
+    <ng-template #modalHeader>
+        Confirmation
+    </ng-template>
+    <ng-template #modalBody>
+        Voulez vous vraiment annuler la commande en cours?
+    </ng-template>
+    <ng-template #modalFooter>
+        <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
+            OUI
+        </button>
+        <button class="dark-purple" (click)="deletionConfirmModal.close()">NON</button>
+    </ng-template>
+</modal>
 
 <modal #deletionConfirmModal class="popup-modal warning">
     <ng-template #modalHeader>
