[SALE] Canceling fixing issues #master

--- a/src/app/product/containers/product-list-root/product-list-root.component.html
+++ b/src/app/product/containers/product-list-root/product-list-root.component.html
@@ -41,6 +41,6 @@
         <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
             OUI
         </button>
-        <button class="green" (click)="deletionConfirmModal.close()">NON</button>
+        <button class="dark-purple" (click)="deletionConfirmModal.close()">NON</button>
     </ng-template>
 </modal>
