--- a/src/app/sale/components/selected-product-list/selected-product-list.component.html
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.html
@@ -29,7 +29,9 @@
         </tfoot>
     </table>
     <div class="buttons-container">
-        <button class="blue">VALIDER</button>
-        <button class="dark-purple" (click)="cancel.emit()">ANNULER</button>
+        <button class="blue" [disabled]="!validSaleItemsLength">VALIDER</button>
+        <button class="dark-purple" [disabled]="!validSaleItemsLength" (click)="cancel.emit()">
+            ANNULER
+        </button>
     </div>
 </div>
