--- a/src/app/sale/components/selected-product-list/selected-product-list.component.scss
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.scss
@@ -53,6 +53,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
 
 button {
     @extend %button;
+
+    &:disabled {
+        opacity: 0.5;
+    }
 }
 
 .blue {
