--- a/src/app/supplier/containers/supplier-root/supplier-root.component.html
+++ b/src/app/supplier/containers/supplier-root/supplier-root.component.html
@@ -35,12 +35,12 @@
         Confirmation
     </ng-template>
     <ng-template #modalBody>
-        Êtes-vous sûr de vouloir supprimer l'element?
+        Êtes-vous sûr de vouloir supprimer cet element?
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
             OUI
         </button>
-        <button class="green" (click)="deletionConfirmModal.close()">NON</button>
+        <button class="dark-purple" (click)="deletionConfirmModal.close()">NON</button>
     </ng-template>
 </modal>
