--- a/src/app/role/containers/role-root/role-root.component.html
+++ b/src/app/role/containers/role-root/role-root.component.html
@@ -34,18 +34,19 @@
     <ng-template #modalHeader>
         Succès
     </ng-template>
-    <ng-template #modalBody> Rôle enregistré avec succès</ng-template>
+    <ng-template #modalBody> Element enregistré avec succès</ng-template>
     <ng-template #modalFooter>
-        <button (click)="saveSuccessModal.close()" class="green">OK</button>
+        <button (click)="saveSuccessModal.close()" class="blue">OK</button>
     </ng-template>
 </modal>
+
 <modal #deleteWarningModal class="popup-modal warning">
     <ng-template #modalHeader>
         Attention
     </ng-template>
-    <ng-template #modalBody> Voulez vous vraiment supprimer ce rôle?<br /> </ng-template>
+    <ng-template #modalBody> Êtes-vous sûr de vouloir supprimer cet element?<br /> </ng-template>
     <ng-template #modalFooter>
-        <button (click)="onDeleteRole()" class="green">OUI</button>
-        <button (click)="deleteWarningModal.close()" class="red">ANNULER</button>
+        <button (click)="onDeleteRole()" class="blue">OUI</button>
+        <button (click)="deleteWarningModal.close()" class="dark-purple">NON</button>
     </ng-template>
 </modal>
