--- a/src/app/sale/components/selected-product-list/selected-product-list.component.scss
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.scss
@@ -71,3 +71,9 @@ button {
     font-weight: bold;
     font-size: 1.5em;
 }
+
+.strikethrough {
+    text-decoration: line-through;
+    text-decoration-color: red;
+    text-decoration-style: wavy;
+}
