--- a/src/app/supplier/components/supplier-form/supplier-form.component.scss
+++ b/src/app/supplier/components/supplier-form/supplier-form.component.scss
@@ -28,6 +28,6 @@ button {
     @extend %blue-button;
 }
 
-.green {
-    @extend %green-button;
+.dark-purple {
+    @extend %dark-purple-button;
 }
