--- a/src/app/supplier/containers/supplier-form-root/supplier-form-root.component.html
+++ b/src/app/supplier/containers/supplier-form-root/supplier-form-root.component.html
@@ -15,7 +15,7 @@
         Succès
     </ng-template>
     <ng-template #modalBody>
-        Element enregistré avec success
+        Element enregistré avec succès
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="successfullSavingModal.close()">
