--- a/src/app/user/containers/user-root/user-root.component.html
+++ b/src/app/user/containers/user-root/user-root.component.html
@@ -35,7 +35,7 @@
         Succès
     </ng-template>
     <ng-template #modalBody>
-        Utilisateur enregistré avec succès
+        Element enregistré avec succès
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="successfullSavingModal.close()">
@@ -49,12 +49,12 @@
         Confirmation
     </ng-template>
     <ng-template #modalBody>
-        Êtes-vous sûr de vouloir supprimer cet utilisateur?
+        Êtes-vous sûr de vouloir supprimer cet element?
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
             OUI
         </button>
-        <button class="green" (click)="deletionConfirmModal.close()">NON</button>
+        <button class="dark-purple" (click)="deletionConfirmModal.close()">NON</button>
     </ng-template>
 </modal>
