--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -18,7 +18,7 @@
                 <td>{{ product.name | titlecase }}</td>
                 <td>{{ product.costPrice | number: '1.0-0' }}</td>
                 <td>{{ product.sellingPrice | number: '1.0-0' }}</td>
-                <td>{{ product.quantity }}</td>
+                <td [class.empty]="!product.quantity">{{ product.quantity || 'epuisé' }}</td>
                 <td>{{ product.supplier.name | uppercase }}</td>
                 <td class="actions">
                     <img
