--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -43,5 +43,13 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
         thead th:nth-child(6) {
             @include thTdWidth($c6Width);
         }
+
+        tr {
+            td {
+                &.empty {
+                    color: red;
+                }
+            }
+        }
     }
 }
