--- a/src/app/sale/components/selectable-product-list/selectable-product-list.component.scss
+++ b/src/app/sale/components/selectable-product-list/selectable-product-list.component.scss
@@ -38,6 +38,14 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
         thead th:nth-child(5) {
             @include thTdWidth($c5Width);
         }
+
+        tr {
+            td {
+                &.empty {
+                    color: red;
+                }
+            }
+        }
     }
 
     img {
